# Agri-Modular-Robot-Simulator

./: Makefile  lemon_field_occ_grid.pgm  lemon_field_occ_grid.yaml  lemon_tree_map.pgm  lemon_tree_map.yaml  maze.pgm  maze.yaml
docker/: Dockerfile  compose.yaml  entrypoint.sh
src/Simulation_Agriculture_Field_Generator/: README.md  package.xml
src/Simulation_Agriculture_Field_Generator/config/: natroon_field.yaml
src/Simulation_Agriculture_Field_Generator/launch/: simulation.launch.py
src/Simulation_Agriculture_Field_Generator/models/natroon_lemon_tree/: model.config  model.sdf
src/Simulation_Agriculture_Field_Generator/models/natroon_palm/: model.config  model.sdf
src/Simulation_Agriculture_Field_Generator/models/orange_tree_natroon/: model.config  model.sdf
src/Simulation_Agriculture_Field_Generator/virtual_maize_field/world_generator/: field.world.template  models.py
src/autonomous/control/mppi_3d/: CMakeLists.txt  package.xml
src/autonomous/control/mppi_3d/config/: mppi_3d_a.yaml  mppi_3d_b.yaml
src/autonomous/control/mppi_3d/include/mppi_3d/: mppi_3d.hpp  mppi_3d_core.hpp
src/autonomous/control/mppi_3d/launch/: mppi_3d_a.launch.py  mppi_3d_b.launch.py
src/autonomous/control/mppi_3d/src/: mppi_3d.cpp  mppi_3d_node.cpp
src/autonomous/control/mppi_4d/: CMakeLists.txt  ROS2_CONVERSION.md  package.xml
src/autonomous/control/mppi_4d/config/: mppi_4d.yaml
src/autonomous/control/mppi_4d/include/mppi_4d/: mppi_4d.hpp
src/autonomous/control/mppi_4d/launch/: mppi_4d.launch.py
src/autonomous/control/mppi_4d/src/: mppi_4d.cpp  mppi_4d_node.cpp
src/autonomous/control/mppi_eval_msgs/: CMakeLists.txt  package.xml
src/autonomous/control/mppi_h/: CMakeLists.txt  package.xml
src/autonomous/control/mppi_h/config/: mppi_h.yaml
src/autonomous/control/mppi_h/include/mode1_mppi_3d/: mppi_3d.hpp
src/autonomous/control/mppi_h/include/mode2_mppi_4d/: mppi_4d.hpp
src/autonomous/control/mppi_h/include/mppi_h/: mppi_h.hpp
src/autonomous/control/mppi_h/launch/: mppi_h.launch.py
src/autonomous/control/mppi_h/src/: mppi_h.cpp  mppi_h_node.cpp
src/autonomous/control/mppi_h/src/mode1_mppi_3d/: mppi_3d_core.cpp
src/autonomous/control/mppi_h/src/mode2_mppi_4d/: mppi_4d_core.cpp
src/autonomous/control/reference_costmap_generator/: CMakeLists.txt  ROS2_CONVERSION.md  package.xml
src/autonomous/control/reference_costmap_generator/config/: reference_costmap_generator.yaml
src/autonomous/control/reference_costmap_generator/launch/: reference_costmap_generator.launch.py
src/autonomous/control/reference_costmap_generator/src/: reference_costmap_generator.cpp  reference_costmap_generator_node.cpp
src/autonomous/planning/reference_costmap_generator/: CMakeLists.txt  package.xml
src/autonomous/planning/reference_costmap_generator/config/: reference_costmap_generator.yaml
src/autonomous/planning/reference_costmap_generator/include/reference_costmap_generator/: reference_costmap_generator.hpp
src/autonomous/planning/reference_costmap_generator/launch/: reference_costmap_generator.launch.py
src/autonomous/planning/reference_costmap_generator/src/: reference_costmap_generator.cpp  reference_costmap_generator_node.cpp
src/autonomous/robot_bringup/: package.xml  setup.py
src/autonomous/robot_bringup/launch/: robot_bringup.launch.py
src/autonomous/robot_bringup/robot_bringup/: open_dashboard.py  robot_bringup.py
src/autonomous/turtlebot4/turtlebot4_navigation/config/: localization.yaml  nav2.yaml  slam.yaml
src/autonomous/turtlebot4/turtlebot4_navigation/launch/: localization.launch.py  nav2.launch.py  slam_async.launch.py  slam_sync.launch.py
src/autonomous/turtlebot4_viz/launch/: view_navigation.launch.py
src/autonomous/turtlebot4_viz/rviz/: navigation.rviz
src/modular_robot_description/: package.xml  setup.cfg  setup.py
src/modular_robot_description/config/: gz_bridge.yaml  joint_controller.yaml
src/modular_robot_description/launch/: gz_simulator_launch.py  launch.py  usb_camera.py
src/modular_robot_description/meshes/collision/: fr_wheel.STL  rl_elevating_arm.STL  rr_elevating_arm.STL  rr_extending_arm.STL  rr_wheel.STL
src/modular_robot_description/meshes/visual/: base_link.STL  fl_elevating_arm.STL  fl_extending_arm.STL  fl_wheel.STL  fr_elevating_arm.STL  fr_extending_arm.STL  fr_steering_arm.STL  frame.STL  rl_extending_arm.STL  rl_steering_arm.STL  rl_wheel.STL  rr_steering_arm.STL
src/modular_robot_description/modular_robot_description/: joy2_controller.py  joy_controller.py  robot_control.py
src/modular_robot_description/urdf/: modular_robot_description_2.urdf  robot.sdf  robot.xacro.sdf
src/modular_robot_description/world/: depot.sdf  generated.world  generated_empty.world
src/operation/joy_controller/: CMakeLists.txt  README.md  package.xml
src/operation/joy_controller/config/: joy.yaml  joy_controller.yaml
src/operation/joy_controller/include/joy_controller/: joy_controller.hpp
src/operation/joy_controller/launch/: joy_controller.launch.py
src/operation/joy_controller/src/: joy_controller.cpp  joy_controller_node.cpp
src/teleop_twist_joy/config/: ps3.config.yaml
src/vel_driver/: CMakeLists.txt  README.md  package.xml
src/vel_driver/config/: vel_driver.yaml
src/vel_driver/include/vel_driver/: vel_driver.hpp
src/vel_driver/launch/: vel_driver.launch.py
src/vel_driver/src/: vel_driver.cpp  vel_driver_node.cpp
