<?xml version="1.0"?>
<package format="3">
  <name>vel_driver</name>
  <version>0.0.0</version>
  <description>The vel_driver package</description>

  <!-- maintainer -->
  <maintainer email="mizuhoaoki1998@gmail.com">Mizuho Aoki</maintainer>

  <!-- license -->
  <license>MIT</license>

  <!-- dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
