cmake_minimum_required(VERSION 3.5)
project(mppi_3d)

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# Parameters
option(USE_OPENMP "USE_OPENMP" ON) # ON / OFF

# Find packages
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(visualization_msgs REQUIRED)
find_package(rviz_2d_overlay_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(grid_map_core REQUIRED)
find_package(grid_map_ros REQUIRED)
find_package(grid_map_filters REQUIRED)
find_package(grid_map_msgs REQUIRED)
find_package(grid_map_visualization REQUIRED)
find_package(mppi_eval_msgs REQUIRED)
find_package(Eigen3 REQUIRED)

# Load OpenMP if enabled
if(USE_OPENMP)
  find_package(OpenMP REQUIRED)
  if(OpenMP_FOUND)
    message(WARNING "OpenMP found. Activate CPU acceleration.")
  else()
    message(FATAL_ERROR "Unable to find OpenMP library.")
  endif()
endif()

# Declare a C++ library
add_library(mppi_3d_core SHARED src/mppi_3d_core.cpp)
ament_target_dependencies(mppi_3d_core PUBLIC
  rclcpp
  geometry_msgs
  visualization_msgs
  rviz_2d_overlay_msgs
  nav_msgs
  tf2
  tf2_geometry_msgs
  tf2_ros
  grid_map_core
  grid_map_ros
  grid_map_filters
  grid_map_msgs
  grid_map_visualization
  mppi_eval_msgs
)
target_include_directories(mppi_3d_core PUBLIC ${EIGEN3_INCLUDE_DIR})
target_include_directories(mppi_3d_core PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>
)
if(USE_OPENMP AND TARGET OpenMP::OpenMP_CXX)
  target_link_libraries(mppi_3d_core PUBLIC OpenMP::OpenMP_CXX)
endif()

# Declare a C++ executable
add_executable(${PROJECT_NAME}_node src/mppi_3d_node.cpp src/mppi_3d.cpp)
ament_target_dependencies(${PROJECT_NAME}_node PUBLIC
  rclcpp
  geometry_msgs
  visualization_msgs
  rviz_2d_overlay_msgs
  nav_msgs
  tf2
  tf2_geometry_msgs
  tf2_ros
  grid_map_core
  grid_map_ros
  grid_map_filters
  grid_map_msgs
  grid_map_visualization
  mppi_eval_msgs
)
target_link_libraries(${PROJECT_NAME}_node PUBLIC mppi_3d_core)

# Install
install(TARGETS mppi_3d_core
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)
install(TARGETS ${PROJECT_NAME}_node
  RUNTIME DESTINATION lib/${PROJECT_NAME}
)
install(
  DIRECTORY launch config
  DESTINATION share/${PROJECT_NAME}
)

install(DIRECTORY include/
  DESTINATION include
)
ament_package()
