<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mppi_h</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ebrahimabdelghfar550@gmail.com">ebrahim</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>mppi_eval_msgs</depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rviz_2d_overlay_msgs</depend>
  <depend>Eigen3</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_filters</depend>
  <depend>grid_map_msgs</depend>
  <depend>libomp-dev</depend>
  <depend>grid_map_cmake_helpers</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
