<?xml version="1.0"?>
<package format="3">
    <name>reference_costmap_generator</name>
  <version>0.0.0</version>
  <description>The reference_costmap_generator package</description>

  <!-- maintainer -->
  <maintainer email="mizuhoaoki1998@gmail.com">Mizuho Aoki</maintainer>

  <!-- license -->
  <license>MIT</license>

  <!-- dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_rviz_plugin</depend>
  <depend>grid_map_visualization</depend>
  <depend>mppi_eval_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>libomp-dev</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>